--- a/companyproject/css/index.css
+++ b/companyproject/css/index.css
@@ -8,8 +8,8 @@ body {
     background-color:#12181b;
     color: rgb(223, 247, 240);
     font-family: 'Open sans' , sans-serif;
-
 }
+
 nav {
     height: 15vh;
     display: flex;
@@ -36,12 +36,17 @@ nav h1{
     color: #fff;
 }
  .link:hover {
-    box-shadow: 0 4px 8px rgba(0,0,0,0.38);
+    /* box-shadow: 0 4px 8px rgba(0,0,0,0.38);
     background: #fa8142;
     color: #fff;
     font-size: 21px;
-     
-    transition: background .4s ease;
+    transition: background .4s ease; */
+    box-shadow: 0 4px 8px rgba(0,0,0,0.38);
+    background: #0666f7;
+    color: #fff;
+    /* font-size: 25px; */
+    transform: translateX(-12px) ;
+    transition: all .4s ease;
 }
 .home {
     position :relative;
@@ -63,9 +68,7 @@ ul.submenu li {
 }
 ul.submenu li:hover {
     background-color: #fa8142;
-
 }
-
 
 @keyframes move {
     from {
@@ -77,10 +80,10 @@ ul.submenu li:hover {
         transform: translateX(0px);
     }
 }
+
 .nav_active {
     transform: translateY(180%) ;
     z-index: 1;
-   
 }
 
 .carousel-cell {
@@ -106,6 +109,7 @@ div.intro {
     margin: 4rem;
 
 }
+
 div.work-details {
     margin :10vh auto ;
     display: flex;
@@ -140,7 +144,7 @@ img.resize {
     border-radius: 5px;
     border: none ;
     background: rgba(255, 255, 255, 0.529);
-    color: #c44805; 
+    color: #064af7; 
     padding: 0.25rem 1rem;
     font-size: 1.15rem;
     cursor: pointer; 
@@ -156,7 +160,7 @@ img.resize {
 }
 .card button:hover {
     box-shadow: 0 4px 8px rgba(0,0,0,0.38);
-    background: #f75a06;
+    background: #068ff7;
     color: #fff;
     font-size: 25px;
     transform: translateX(-12px) ;
