--- a/companyproject/css/about.css
+++ b/companyproject/css/about.css
@@ -19,7 +19,7 @@ nav {
     position: sticky;
 }
 nav h1{
-    font-size: 2rem;
+    font-size: 1.8rem;
     width: 40%;
 }
 .navlinks {
@@ -60,7 +60,7 @@ nav h1{
 ul.submenu {
     list-style-type: none;
     position: absolute;
-    top: -400%;
+    top: -500%;
      left: -5%;
     
 }
@@ -89,7 +89,7 @@ ul.submenu li:hover {
     }
 }
 .nav_active {
-    transform: translateY(180%) ;
+    transform: translateY(210%) ;
     z-index: 1;
    
 }
@@ -110,12 +110,13 @@ ul.submenu li:hover {
 }
 .image-content {
     max-width: 33%;
+    max-height: 30%;
 }
 
 
 .image-content img {
     width: 100%;
-    height: 80%;   
+    height: 80%;
     object-fit: cover;
     box-shadow: 0 1rem 1rem  rgba(14, 17, 17, 0.864) ;
 }
@@ -130,6 +131,7 @@ ul.submenu li:hover {
 
 .work-content p {
     line-height: 2rem;
+    word-wrap: break-word;
 
 }
 
@@ -160,4 +162,46 @@ ul.submenu li:hover {
  color: #fff;
 }
     
+
+
+@media screen and (max-width: 760px ) {
+    body {
+        font-size: 12px;
+    }
+    nav {
+        flex-direction: column;
+        align-items: space-evenly;
+        justify-content: space-around;
+        padding-top: 0.5rem;
+    }
+    nav h1 {
+        margin-bottom: 0.5rem;
+    }
+
+    .navlinks {
+        display: flex;
+        width: 100%
+        justify-content: space-between;
+    }
+
+    div.footer {
+        font-size: 10px;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+   
+    .content {
+        align-items: center;
+    }
+    .image-content {
+        margin-top: 0;
+        padding-top: 0;
+        width: 100%;
+    }
+    .work-content  {
+        flex-grow: 1;
+        
+        
+    }
+}
   
